<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".activity.MainActivity">

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/amita_bold"
        android:paddingStart="8dp"
        android:paddingTop="4dp"
        android:paddingEnd="8dp"
        android:paddingBottom="4dp"
        android:text="@string/app_name"
        android:textColor="#333333"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/bannerImage"
        android:layout_width="376dp"
        android:layout_height="335dp"
        android:contentDescription="@string/no"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appName"
        app:srcCompat="@drawable/main_screen" />

    <TextView
        android:id="@+id/appDescription"
        android:layout_width="398dp"
        android:layout_height="232dp"
        android:fontFamily="@font/amita"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/app_description"
        android:textColor="#333333"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bannerImage" />

    <Button
        android:id="@+id/addMovieBtn"
        android:onClick="onAddMovieBtnClicked"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_movie"
        android:textColor="#FFFFFF"
        android:backgroundTint="@color/main_blue"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appDescription"
        app:layout_constraintEnd_toStartOf="@id/viewMoviesBtn"
        app:layout_constraintHorizontal_bias="0.5"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/viewMoviesBtn"
        android:onClick="onViewMoviesBtnClicked"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/view_movies"
        android:textColor="#FFFFFF"
        android:backgroundTint="@color/main_red"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toEndOf="@id/addMovieBtn"
        app:layout_constraintTop_toBottomOf="@id/appDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        tools:ignore="UsingOnClickInXml" />

</androidx.constraintlayout.widget.ConstraintLayout>